# sinfonia_toolkit

./: CMakeLists.txt  README.md  mkdocs.yml  package.xml  robot_toolkit.sh
1. Getting Started/: index.html
docs/: 1. Getting Started.md  2. External Sources.md  3. Scripts.md  conf.py  externalsources.md  gettingstarted.md  index.rst
docs/Audio Tools/Mic Tools/: Mic Event.md  Mic Localization Event.md
docs/Manipulation/: SinfonIA Resources.md
docs/Mic Tools/: Mic Converter.md  Mic Event.md  Mic Publisher.md
docs/_build/doctrees/: environment.pickle  gettingstarted.doctree  index.doctree
docs/_build/html/: .buildinfo  genindex.html  gettingstarted.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: gettingstarted.md.txt  index.rst.txt
docs/source/: conf.py  index.rst
home_scripts/: compress.sh  copy_scripts.sh  extract.sh  send_to_robot.sh  set_pepper_ip.sh  set_proxy.sh  set_time.sh  startRos.sh  start_robot_toolkit_eth.sh  start_robot_toolkit_wlan.sh  unset_proxy.sh
include/robot_toolkit/: message_actions.h  naoqi_environment.hpp  robot_toolkit.hpp  ros_environment.hpp
include/robot_toolkit/audio_tools/mic/: mic_converter.hpp  mic_event.hpp  mic_localization_event.hpp  mic_localization_publisher.hpp  mic_publisher.hpp
include/robot_toolkit/audio_tools/speech/: speech_subscriber.hpp
include/robot_toolkit/audio_tools/speech_recognition/: speech_recognition_event.hpp
include/robot_toolkit/converter/: converter.hpp  converter_base.hpp
include/robot_toolkit/event/: event.hpp
include/robot_toolkit/helpers/: filesystem_helpers.hpp  recorder_helpers.hpp  scheduled_conveter.hpp  toolkit_helpers.hpp  transform_helpers.hpp  vision_helpers.hpp
include/robot_toolkit/misc_tools/: leds_subscriber.hpp
include/robot_toolkit/misc_tools/sonar/: sonar_converter.hpp  sonar_publisher.hpp
include/robot_toolkit/misc_tools/special_settings/: special_settings_subscriber.hpp
include/robot_toolkit/misc_tools/touch/: touch_event.hpp  touch_publisher.hpp
include/robot_toolkit/motion_tools/: animation_subscriber.hpp  set_angles_subscriber.hpp
include/robot_toolkit/navigation_tools/cmd_vel/: cmd_vel_subscriber.hpp
include/robot_toolkit/navigation_tools/free_zone/: free_zone_subscriber.hpp
include/robot_toolkit/navigation_tools/laser/: depth_to_laser_converter.hpp  laser_converter.hpp  laser_merged_converter.hpp  laser_publisher.hpp  naoqi_depth2laser_converter.hpp
include/robot_toolkit/navigation_tools/move_to/: move_to.hpp
include/robot_toolkit/navigation_tools/navigation_goal/: navigation_goal_subscriber.hpp
include/robot_toolkit/navigation_tools/odom/: odom_converter.hpp  odom_publisher.hpp
include/robot_toolkit/navigation_tools/path/: path_converter.hpp  path_publisher.hpp
include/robot_toolkit/navigation_tools/result/: result_event.hpp  result_publisher.hpp
include/robot_toolkit/navigation_tools/robot_pose/: robot_pose_converter.hpp  robot_pose_publisher.hpp  robot_pose_subscriber.hpp
include/robot_toolkit/navigation_tools/tf/: tf_converter.hpp  tf_publisher.hpp
include/robot_toolkit/publisher/: publisher.hpp
include/robot_toolkit/subscriber/: base_subscriber.hpp  subscriber.hpp
include/robot_toolkit/tools/: robot_description.hpp  tools.hpp
include/robot_toolkit/vision_tools/: camera_converter.hpp  camera_publisher.hpp  face_detector.hpp  face_publisher.hpp  face_tracker.hpp
launch/: robot_toolkit_eth_no_odom.launch  robot_toolkit_eth_odom.launch  robot_toolkit_wlan_no_odom.launch  robot_toolkit_wlan_odom.launch
pytoolkit/: pyToolkit.py
scripts/: pyToolkit.py
share/camera_info/: bottom_camera_info.json  depth_camera_info.json
site/: 404.html
site/2. External Sources/: index.html
site/search/: search_index.json
src/: autoload_registration.cpp  main.cpp  robot_toolkit.cpp
src/audio_tools/mic/: mic_converter.cpp  mic_event.cpp  mic_localization_event.cpp  mic_localization_publisher.cpp  mic_publisher.cpp
src/audio_tools/speech/: speech_subscriber.cpp
src/audio_tools/speech_recognition/: speech_recognition_event.cpp
src/helpers/: toolkit_helpers.cpp
src/misc_tools/: leds_subscriber.cpp
src/misc_tools/sonar/: sonar_converter.cpp  sonar_publisher.cpp
src/misc_tools/special_settings/: special_settings_subscriber.cpp
src/misc_tools/touch/: touch_event.cpp  touch_publisher.cpp
src/motion_tools/: animation_subscriber.cpp  set_angles_subscriber.cpp
src/navigation_tools/cmd_vel/: cmd_vel_subscriber.cpp
src/navigation_tools/free_zone/: free_zone_subscriber.cpp
src/navigation_tools/laser/: depth_to_laser_converter.cpp  laser_converter.cpp  laser_merged_converter.cpp  laser_publisher.cpp  naoqi_depth2laser_converter.cpp
src/navigation_tools/move_to/: move_to.cpp
src/navigation_tools/navigation_goal/: navigation_goal_subscriber.cpp
src/navigation_tools/odom/: odom_converter.cpp  odom_publisher.cpp
src/navigation_tools/path/: path_converter.cpp  path_publisher.cpp
src/navigation_tools/result/: result_event.cpp  result_publisher.cpp
src/navigation_tools/robot_pose/: robot_pose_converter.cpp  robot_pose_publisher.cpp  robot_pose_subscriber.cpp
src/navigation_tools/tf/: tf_converter.cpp  tf_publisher.cpp
src/tools/: robot_description.cpp
src/vision_tools/: camera_converter.cpp  camera_publisher.cpp  face_detector.cpp  face_publisher.cpp
wiki/images/audio_tools/: audio_tools_diagram.drawio
wiki/images/misc_tools/: misc_tools_diagram.drawio
wiki/images/motion_tools/: motion_tools_diagram.drawio
wiki/images/navigation_tools/: navigation_tools_diagram.drawio
wiki/images/vision_tools/: vision_tools_diagram.drawio
