<?xml version="1.0"?>
<package format="2">
  <name>robot_toolkit</name>
  <version>0.0.0</version>
  <description>The robot_toolkit package</description>

  <maintainer email="cdc-ia3@todo.todo">cdc-ia3</maintainer>


<exec_depend>robot_toolkit_msgs</exec_depend>
  <build_depend>robot_toolkit_msgs</build_depend>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_toolkit_msgs</exec_depend>
  <build_depend>robot_toolkit_msgs</build_depend>

  <export>

  </export>
</package>
